<resources>
    <string name="app_name">Zeplin</string>
    <string name="t1">Log In</string>
    <string name="t2">Email</string>
    <string name="t3">Password</string>
    <string name="t4">login</string>
    <string name="t5">sign up</string>
    <string name="t11">Sign Up</string>
    <string name="t12">Full Name</string>
    <string name="t13">Enter Your Name</string>
    <string name="t14">Email</string>
    <string name="t15">Enter Your Email</string>
    <string name="t16">Password</string>
    <string name="t17">********</string>
    <string name="t18">Confirm Password</string>
    <string name="t20">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>


</resources>