<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupPage"
    android:background="@drawable/back1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp">
        <TextView
            android:id="@+id/t11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t11"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/textcolor"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/t12"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t12"
        android:labelFor="@id/t13"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/textcolor"
        />
    <EditText
        android:id="@+id/t13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/t13"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/textcolor"
        android:textColor="@color/textcolor"
        />

    <TextView
        android:id="@+id/t14"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t14"
        android:labelFor="@id/t15"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/textcolor"/>
    <EditText
        android:id="@+id/t15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/t15"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="emailAddress"
        android:textColorHint="@color/textcolor"
        android:textColor="@color/textcolor"
        />

    <TextView
        android:id="@+id/t16"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t16"
        android:labelFor="@id/t17"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/textcolor"/>
    <EditText
        android:id="@+id/t17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/t17"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/textcolor"
        android:textColor="@color/textcolor"
        android:drawableEnd="@drawable/ic_eye_closed"

        />

    <TextView
        android:id="@+id/t18"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t18"
        android:labelFor="@id/t19"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/textcolor"/>
    <EditText
        android:id="@+id/t19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/t17"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColorHint="@color/textcolor"
        android:textColor="@color/textcolor"
        android:drawableEnd="@drawable/ic_eye_closed"
        />
    <LinearLayout
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t11"/>

        <TextView
            android:id="@+id/t20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/t20"
            android:textColor="#03266C"
            android:gravity="center"
            />


    </LinearLayout>


</LinearLayout>
