<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:orientation="vertical"
    tools:context=".LoginPage">

    <ImageView
        android:layout_width="208dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@null"
        android:src="@drawable/imgview" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:padding="30dp"
        android:layout_marginBottom="0dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"

            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/rou_cor"
                android:padding="6dp"
                android:paddingTop="10dp"
                android:text="@string/t1"
                android:textColor="@color/textcolor"
                android:textSize="35sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="6dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/rou_cor"
                android:hint="@string/t2"
                android:inputType="textEmailAddress"
                android:padding="6dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:drawableEnd="@drawable/ic_email"/>

            <EditText
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="6dp"
                android:autofillHints="password"
                android:background="@drawable/rou_cor"
                android:hint="@string/t3"
                android:inputType="textPassword"
                android:padding="6dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColor="@color/black"
                android:textColorHint="@color/textcolor"
                android:drawableEnd="@drawable/ic_eye_closed"/>


            <Button
                android:id="@+id/t4"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:text="@string/t4"
                android:textSize="20sp"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:text="New to Zeplin ?"
                    android:textColor="@color/textcolor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/t5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/t5"
                    android:textStyle="bold"
                    android:textColor="@color/textcolor" />
            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>